# go-rust-ffi

./: .gitignore  LICENSE  Makefile  README.md  go.mod  main.go
.github/workflows/: go.yml
lib/: rs-qr.h
lib/rs-qr/: Cargo.toml  build.rs
lib/rs-qr/src/: lib.rs
